# AudioEncoder

app/: build.gradle
app/src/androidTest/java/com/example/yllds/audioencoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/yllds/audioencoder/: Externtion.kt  HardAudioEncoder.kt  MainActivity.kt  OutputAACDelegate.kt  SoftAudioEncoder.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yllds/audioencoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
